# esg-publisher

./: .buildinfo  .classpath  .gitignore  .project  .readthedocs.yaml  INSTALL  KERCHUNK_PATH_FEATURE.md  Makefile  Publisher-checklist.md  README  README.md  README.old  TODO  advanced.html  build.xml  cc5-schema.json  cert.pem  configuration.html  esg.yaml  example-config.yaml  faq.html  genindex.html  index.html  install-publisher.sh  installation.html  ivy.xml  ivysettings.xml  mapfiles.html  move.sh  objects.inv  out.json  pub-2-0.py  pub-workflow.py  publish.sh  pyproject.toml  refactor_imports.py  replica_cron.sh  schema.json  search.html  searchindex.js  (+3 more)
.github/workflows/: test.yml
.metadata/.plugins/org.eclipse.epp.usagedata.recording/: usagedata.csv
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml
docs/: Makefile  advanced.rst  autocurator.rst  cmor.rst  conf.py  configuration.rst  contributing.rst  esgadd.rst  esgindexpub.rst  esglogin.rst  esgmapconv.rst  esgmigrate.rst  esgmkpubrec.rst  esgpidcitepub.rst  esgpublish.rst  esgpublish.rst.sav  esgunpublish.rst  esgupdate.rst  faq.rst  header  index.bak  index.rst  install.rst  installation.rst  intro.rst  mapfiles.rst  notebooks.rst  requirements.txt  testpublication.rst  troubleshooting.rst  usage.rst  whatsnew.rst
docs/_build/doctrees/: environment.pickle  esgindexpub.doctree  esgmapconv.doctree  esgmkpubrec.doctree  esgpidcitepub.doctree  esgpublish.doctree  esgupdate.doctree  index.doctree  install.doctree
docs/_build/html/: .buildinfo  esgindexpub.html  esgmapconv.html  esgmkpubrec.html  esgpidcitepub.html  esgpublish.html  esgupdate.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/_themes/sphinx_glpi_theme/: MANIFEST.in  README.rst  setup.py
docs/notes/: log_levels.txt
docs/uml/: esg_client_pub_classes.puml  esg_index_pub_classes.puml  esg_publish_classes.puml  esg_publish_flow.puml
etc/: esg-publisher.ant.properties
etc/conf/: log4j.properties
gen-five/src/python/: CMIP6.CMIP.E3SM-Project.E3SM-1-0.historical.r2i1p1f1.Amon.ps.gr.v20200615.map.map.json  activity_check.py  args.py  autocurator.sh  cmip6_handler.py  mapfile.py  mk_dataset.py  pid_cite_pub.py  pub-internal.py  pub_client.py  pub_test.py  publish_script.py  settings.py  unpublish.py  update.py
gen-five/src/workflow/: esgpublish.sh  test-drive.sh
legacy/: INSTALL
legacy/etc/conf/: commons-logging.properties  publisher.properties
notebooks/: cmip-inventory.ipynb  cmip6-config.ipynb  cmip6-publishing.ipynb  data-retract.ipynb  datasets_work.ipynb  index-pub-cfg.ipynb  new-project-config.ipynb  publish-multi-maps.ipynb  publish-testing.ipynb  unpublish-list.ipynb
pkg/: esg.ini  esg.yaml  example-config.yaml  install.sh  setup.py
pkg/docs/: esgindexpub.rst  esgmkpubrec.rst  esgpidcitepub.rst  esgupdate.rst  index.rst  install.rst
pkg/esgcet/: __init__.py  activity_check.py  args.py  cmip5.py  cmip6.py  cordex.py  create_ip.py  e3sm.py  esg.ini  esgindexpub.py  esgmapconv.py  esgmigrate.py  esgmkpubrec.py  esgpidcitepub.py  esgunpublish.py  esgupdate.py  generic_netcdf.py  generic_pub.py  index_pub.py  input4mips.py  logger.py  mapfile.py  migratecmd.py  mk_dataset.py  mk_dataset_autoc.py  mk_dataset_xarray.py  mkd_cmip5.py  mkd_cordex.py  mkd_create_ip.py  mkd_input4mips.py  mkd_non_nc.py  pid_cite_pub.py  pub-internal.py  pub_client.py  pub_internal.py  search_check.py  settings.py  unpublish.py  update.py  update2.py
pkg/scripts/: mapfileloop.sh  mapfn2jsonfn.py
recipe/: meta.yaml
scripts/: gen_mapfile.sh
sources/: configuration.rst.txt  installation.rst.txt  mapfiles.rst.txt  usage.rst.txt
src/python/: MANIFEST.in  PKG-INFO  esg.test.yaml  setup.py
src/python/esgcet/: CMIP6Plus_CV.json  LICENSE  __init__.py  activity_check.py  args.py  cmip6.py  egi_oauth2_device_flow.py  esgindexpub.py  esglogin.py  esgmapconv.py  esgmigrate.py  esgmkpubrec.py  esgpidcitepub.py  esgstacaddrep.py  esgstacpub.py  esgunpublish.py  esgupdate.py  foo.json  generic_netcdf.py  generic_pub.py  globus_query.py  globus_search.py  index_pub.py  input4mips.py  list2json.py  logger.py  migratecmd.py  mk_dataset.py  mk_dataset_autoc.py  mk_dataset_nc4.py  mk_dataset_xarray.py  mkd_create_ip.py  mkd_input4mips.py  mkd_non_nc.py  pid_cite_pub.py  pub_client.py  pub_internal.py  publish.sh  publish_script.py  requirements.txt  (+15 more)
src/python/gen_test_data/: gen_test_data.py  input_files
src/python/geomip/: setup.py
src/python/test_suite/: README.md  mapfile-loop.sh  one_time_setup.py  randomizer.py  run_tests.py  test_suite.ini  (+1 more)
static/: documentation_options.js
tests/: test_backward_compat.py  test_cli_basic.py
tests/unit/: conftest.py  test_esgf15_globus.py  test_generic_netcdf.py  test_kerchunk_generator.py  test_mapfile_model.py  test_util_args.py  test_util_mapfile.py
(+378 files in other folders)
